old-code/sa/ppu/grafana/vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  gateways:
  - istio-system/main-gateway
  hosts:
  - infra-grafana.slleisure.com
  - tw-infra-grafana.slleisure.com
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: infra-grafana.monitoring.svc.cluster.local
        port:
          number: 80
